[metadata]
name=benchcab
summary= Software to run a benchmarking suite for CABLE LSM
description=To benchmark CABLE simulations
url=https://github.com/CABLE-LSM/benchcab
license=Apache 2.0
classifier=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts = 
    benchcab=benchcab.main:main

[tool:pytest]
addopts = --doctest-modules --doctest-glob='*.rst' --ignore setup.py --ignore conftest.py --ignore docs/conf.py

[options.package_data]
benchcab =
    data/test/pbs_jobscript_skip_bitwise.sh
    data/test/integration.sh
    data/test/template.j2
    data/test/pbs_jobscript_default.sh
    data/test/config-invalid.yml
    data/test/config-basic.yml
    data/test/config-optional.yml
    data/test/pbs_jobscript_verbose.sh
    data/config-schema.yml
    data/pbs_jobscript.j2

[versioneer]
VCS = git
style = pep440
versionfile_source = None
tag_prefix = v
